Basic pdf with jspdf

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@iconscout/react-unicons": "^1.1.6",
+    "jspdf": "^2.5.1",
     "mongodb": "^4.11.0",
     "next": "13.0.0",
     "react": "18.2.0",
