--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongodb": "^4.11.0",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
     "eslint": "8.26.0",
