--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@iconscout/react-unicons": "^1.1.6",
     "formik": "^2.2.9",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
     "jspdf": "^2.5.1",
     "mongodb": "^4.11.0",
     "next": "13.0.0",
@@ -19,6 +22,9 @@
     "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0"
   }
